[workspace]
members = [
	"core",
	"core-client",
	"core-client/transports",
	"http",
	"ipc",
	"derive",
	"pubsub",
	"pubsub/more-examples",
	"server-utils",
	"stdio",
	"tcp",
	"test",
	"ws",
]

[workspace.package]
version = "18.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/jsonrpc"
homepage = "https://github.com/paritytech/jsonrpc"
license = "MIT"
edition = "2018"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]

[workspace.dependencies]
# local projects
jsonrpc-core = { version = "18.0.0", path = "./core" }
jsonrpc-core-client = { version = "18.0.0", path = "./core-client" }
jsonrpc-http-server = { version = "18.0.0", path = "./http" }
jsonrpc-ipc-server = { version = "18.0.0", path = "./ipc" }
jsonrpc-pubsub = { version = "18.0.0", path = "./pubsub" }
jsonrpc-server-utils = { version = "18.0.0", path = "./server-utils" }
jsonrpc-tcp-server = { version = "18.0.0", path = "./tcp" }

assert_matches = "1.3"
env_logger = "0.7"
futures = "0.3"
lazy_static = "1.0"
log = "0.4"
hyper = "0.14"
parking_lot = "0.11.0"
parity-tokio-ipc = "0.9"
serde = "1.0"
serde_json = "1.0"
tokio = "1"
tokio-util = "0.6"
tower-service = "0.3"
unicase = "2.0"
