[package]
documentation = "https://docs.rs/jsonrpc-derive/"
description = "High level, typed wrapper for `jsonrpc-core`"
name = "jsonrpc-derive"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit", "fold"] }
proc-macro2 = "1.0"
quote = "1.0.6"
proc-macro-crate = "0.1.4"

[dev-dependencies]
assert_matches.workspace = true
jsonrpc-core.workspace = true
jsonrpc-core-client.workspace = true
jsonrpc-pubsub.workspace = true
jsonrpc-tcp-server.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
trybuild = "1.0"
