[package]
description = "Rust http server using JSONRPC 2.0."
documentation = "https://docs.rs/jsonrpc-http-server/"
name = "jsonrpc-http-server"
version = { workspace = true }
authors = { workspace = true }
keywords.workspace = true
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
futures.workspace = true
hyper = { workspace = true, features = ["http1", "tcp", "server", "stream"] }
jsonrpc-core.workspace = true
jsonrpc-server-utils.workspace = true
log.workspace = true
net2 = "0.2"
parking_lot.workspace = true
unicase.workspace = true

[dev-dependencies]
env_logger.workspace = true

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master" }
