[package]
description = "IPC server for JSON-RPC"
documentation = "https://docs.rs/jsonrpc-ipc-server/"
name = "jsonrpc-ipc-server"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
log.workspace = true
tower-service.workspace = true
jsonrpc-core.workspace = true
jsonrpc-server-utils.workspace = true
parity-tokio-ipc.workspace = true
parking_lot.workspace = true

[dev-dependencies]
env_logger.workspace = true
lazy_static.workspace = true

[target.'cfg(not(windows))'.dev-dependencies]
tokio = { workspace = true, default-features = false, features = [
	"net",
	"time",
	"rt-multi-thread",
] }

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master" }
