[package]
description = "Publish-Subscribe extension for jsonrpc."
documentation = "https://docs.rs/jsonrpc-pubsub/"
name = "jsonrpc-pubsub"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
futures = { workspace = true, features = ["thread-pool"] }
jsonrpc-core.workspace = true
lazy_static.workspace = true
log.workspace = true
parking_lot = "0.11.0"
rand = "0.8"
serde.workspace = true

[dev-dependencies]
jsonrpc-tcp-server.workspace = true
serde_json.workspace = true

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master" }
