[package]
description = "Server utils for jsonrpc-core crate."
documentation = "https://docs.rs/jsonrpc-server-utils/"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
name = "jsonrpc-server-utils"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bytes = "1.0"
futures.workspace = true
globset = "0.4"
jsonrpc-core = { version = "18.0.0", path = "../core" }
lazy_static.workspace = true
log.workspace = true
tokio = { workspace = true, features = [
	"rt-multi-thread",
	"io-util",
	"time",
	"net",
] }
tokio-util = { workspace = true, features = ["codec"] }
tokio-stream = { version = "0.1", features = ["net"] }

unicase.workspace = true

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master" }
