[package]
description = "STDIN/STDOUT server for JSON-RPC"
documentation = "https://docs.rs/jsonrpc-stdio-server/"
name = "jsonrpc-stdio-server"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
jsonrpc-core.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util"] }
tokio-util = { workspace = true, features = ["codec"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
lazy_static.workspace = true
env_logger.workspace = true

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master" }
