[package]
description = "TCP/IP server for JSON-RPC"
documentation = "https://docs.rs/jsonrpc-tcp-server/"
name = "jsonrpc-tcp-server"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
jsonrpc-core.workspace = true
jsonrpc-server-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
tower-service.workspace = true

[dev-dependencies]
lazy_static.workspace = true
env_logger.workspace = true

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master" }
