[package]
name = "jsonrpc-test"
description = "Simple test framework for JSON-RPC."
authors = ["Tomasz Drwięga <tomasz@parity.io>"]
documentation = "https://docs.rs/jsonrpc-test/"
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
jsonrpc-core.workspace = true
jsonrpc-core-client.workspace = true
jsonrpc-pubsub.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
arbitrary_precision = [
	"jsonrpc-core-client/arbitrary_precision",
	"serde_json/arbitrary_precision",
	"jsonrpc-core/arbitrary_precision",
]

[dev-dependencies]
jsonrpc-derive.workspace = true
