[package]
description = "WebSockets server for JSON-RPC"
documentation = "https://docs.rs/jsonrpc-ws-server/"
name = "jsonrpc-ws-server"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
jsonrpc-core.workspace = true
jsonrpc-server-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
slab = "0.4"
parity-ws = "0.11.1"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master" }
