[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Transport agnostic JSON-RPC 2.0 client implementation."
documentation = "https://docs.rs/jsonrpc-client-transports/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "jsonrpc-client-transports"
repository = "https://github.com/paritytech/jsonrpc"
version = "18.0.0"

categories = [
	"asynchronous",
	"network-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket",
]

[features]
default = ["http", "tls", "ws"]
tls = ["hyper-tls", "http"]
http = ["hyper", "tokio/full"]
ws = ["websocket", "tokio", "futures/compat"]
ipc = ["parity-tokio-ipc", "jsonrpc-server-utils", "tokio"]
arbitrary_precision = [
	"serde_json/arbitrary_precision",
	"jsonrpc-core/arbitrary_precision",
]

[dependencies]
derive_more = "0.99"
futures.workspace = true
jsonrpc-core.workspace = true
jsonrpc-pubsub.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

hyper = { workspace = true, features = [
	"client",
	"http1",
	"tcp",
], optional = true }
hyper-tls = { version = "0.5", optional = true }
jsonrpc-server-utils = { workspace = true, optional = true }
parity-tokio-ipc = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
websocket = { version = "0.26", optional = true }

[dev-dependencies]
assert_matches.workspace = true
jsonrpc-http-server.workspace = true
jsonrpc-ipc-server.workspace = true
lazy_static.workspace = true
env_logger.workspace = true

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master" }
